--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     background-image: url(https://frontiersinblog.files.wordpress.com/2019/09/frontiers-in-oncology-bacterial-immunotherapy.jpg);
     background-size: 100% 100%;
     text-align: center;
-}
+    }
 
   </style>
+  <style type="text/css">
+    body { background: navy !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
+ </style>
 </head>
 
 <body>
@@ -32,7 +35,7 @@
     </div>
     <div class="row">
       <div class="col-md-2">
-        <div class="well">
+        <div class="well" shadow="p-3 mb-5 bg-white rounded" !important; >
           <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
@@ -41,17 +44,17 @@
           <div class="panel-heading">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
-          <div id="sample-metadata" class="panel-body"></div>
+          <div id="sample-metadata" class="panel-body" shadow="p-3 mb-5 bg-white rounded" !important; ></div>
         </div>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-5" shadow="p-3 mb-5 bg-white rounded" !important; >
         <div id="bar"></div>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
       </div>
     </div>
-    <div class="row">
+    <div class="row" shadow="p-3 mb-5 bg-white rounded">
       <div class="col-md-12">
         <div id="bubble"></div>
       </div>
