--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
     background-size: 100% 100%;
     text-align: center;
     }
-
+    .body { 
+    background: #563d7c !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
   </style>
-  <style type="text/css">
-    body { background: navy !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
- </style>
 </head>
 
 <body>
@@ -53,7 +51,7 @@
       <div class="col-md-5">
         <div id="gauge"></div>
       </div>
-    </div>
+    </div><br /><br />
     <div class="row" shadow="p-3 mb-5 bg-white rounded">
       <div class="col-md-12">
         <div id="bubble"></div>
