--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="row">
       <div class="col-md-2">
-        <div class="well" shadow="p-3 mb-5 bg-white rounded" !important; >
+        <div class="well" shadow="p-3 mb-5 bg-white rounded">
           <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
@@ -42,10 +42,10 @@
           <div class="panel-heading">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
-          <div id="sample-metadata" class="panel-body" shadow="p-3 mb-5 bg-white rounded" !important; ></div>
+          <div id="sample-metadata" class="panel-body" shadow="p-3 mb-5 bg-white rounded"></div>
         </div>
       </div>
-      <div class="col-md-5" shadow="p-3 mb-5 bg-white rounded" !important; >
+      <div class="col-md-5" shadow="p-3 mb-5 bg-white rounded">
         <div id="bar"></div>
       </div>
       <div class="col-md-5">
