--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           <div id="sample-metadata" class="panel-body" bg="light" shadow="p-3 mb-5 bg-white rounded"></div>
         </div>
       </div>
-      <div class="col-md-6" >
-        <div id="bar"><p class="bg-info" shadow="p-3 mb-5 bg-white rounded"></p></div>
+      <div class="col-md-5" >
+        <div id="bar"><p class="bg-info"></p></div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-5">
         <div class="polaroid rotate_left">
           <img src="https://mediad.publicbroadcasting.net/p/shared/npr/styles/medium/nprshared/202001/658570218.jpg" alt="Clostridia" width="100%" height="100%">
           <p class="caption"><em>Clostridia</em> is an abundant bacteria found both inside and outside of the human body. <em><small>Photo credit: University of South Florida</small></em></p>
